@@ -16,6 +16,10 @@ mountall (0.2.2) UNRELEASED; urgency=low
     LABEL=foo /home ext4 nobootwait 0 0
 
   * Mount /proc before attempting to parse /proc/filesystems.  LP: #447947.
+  * Further improvements to event tagging of filesystems.  A virtual bootwait
+    filesystem underneath a local or remote filesystem inherits that tag,
+    a local bootwait filesystem underneath a remote filesystem inherits that
+    tag, remote filesystems do not inherit them.  LP: #447654.
 
  -- Steve Langasek <steve.langasek@ubuntu.com>  Sun, 11 Oct 2009 23:07:55 -0700
 
